# python_template

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  pre-commit-config.yaml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build-docs.yml  codeql-analysis.yml  coverage.yml  docs.yml  ruff.yml  tests.yml
examples/: __init__.py
template/: shortcuts.py
tests/: __init__.py  test_template.py
