# Basic Project Description.
[project]
name = "Template"
version = "0.0.1"
maintainers = [{ name = "Simon Leiner", email = "simon.leiner1@gmail.com" }]
authors = [{ name = "Simon Leiner", email = "simon.leiner1@gmail.com" }]
description = "Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["Coding", "Python", "Template", "Project"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Family",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]

# Ruff formatter.
[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "examples",
    "custom_notebooks",
]

# set line legth
line-length = 150
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = [
    "D100",
    "PLR0913",
    "B018",
    "D103",
    "PD901",
    "E501",
    "ANN101",
    "G004",
    "D102",
    "D101",
    "S101",
    "D211",
    "D213",
    "D107",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

# Setuptools Flat file structure withour src/
[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "*",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)
